# SeparadorArquivosFreela

./: .gitignore  Makefile  app.py  extractMethods.py  pdfExceptions.py  pyproject.toml  test_extract_methods.py
