[tool.poetry]
name = "separadorarquivosfreela"
version = "0.1.0"
description = ""
authors = ["Yuri Lemos Rodrigues <yuri.ylr@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pdfminer = "^20191125"
openpyxl = "^3.1.2"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"